syntax = "proto3";

package sec06;

import "google/protobuf/empty.proto";

option java_package = "io.defassio.proto.models.sec06";
option java_multiple_files = true;

message BalanceCheckRequest {
  int32 account_number = 1;
}

message AccountBalance {
  int32 account_number = 1;
  int32 balance = 2;
}

message AllAccountsResponse {
  repeated AccountBalance accounts_balance = 1;
}

service BankService {
  // unary
  rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);
  rpc GetAllAccounts(google.protobuf.Empty) returns (AllAccountsResponse);
}